[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulumi-component-tree"
version = "0.1.0"
authors = [
  { name = "Schuyler Erle" },
]
description = "Tree-like structure for managing Pulumi ComponentResources and their dependencies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pulumi>=3.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/schuyler/pulumi-component-tree"
"Bug Tracker" = "https://github.com/schuyler/pulumi-component-tree/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose"
filterwarnings = [
    "ignore::DeprecationWarning:google._upb._message",
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::DeprecationWarning:pulumi.runtime.resource"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build]
include = [
    "src/pulumi_component_tree/**/*.py",
    "src/pulumi_component_tree/py.typed"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pulumi_component_tree"]
