[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulumi-component-tree"
version = "0.1.0"
authors = [
  { name = "Schuyler Erle" },
]
description = "A Python framework for building tree-structured Pulumi components that facilitate clear organization and dependency management of cloud infrastructure resources"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pulumi>=3.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/schuyler/pulumi-component-tree"
"Bug Tracker" = "https://github.com/schuyler/pulumi-component-tree/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "--verbose --disable-pytest-warnings --cov=src/pulumi_component_tree --cov-report=xml --cov-report=term"
filterwarnings = [
    "ignore::DeprecationWarning:google._upb._message",
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::DeprecationWarning:pulumi.runtime.resource"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pulumi_component_tree"]

[tool.setuptools.package-data]
pulumi_component_tree = ["py.typed"]
